--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-body {background-color:tan;}
-h1{color:green;}
+body {background-color:black;font-family:Arial;color:white}
+h1{color:grey;}
+.maindiv{background-color:white;color:black;width:300;padding:20px;border-radius:25px;align-content:center;}
+
 
 
 
